<resources>
    <string name="app_name">CoReader</string>
    <string name="title_activity_code_read">CoReader</string>
    <string name="title_activity_add_repo">Download Repo</string>
    <string name="title_activity_setting">Settings</string>

    <string name="snackbar_action">Sure</string>

    <!-- action -->
    <string name="action_settings">Settings</string>
    <string name="action_go_out">Go Out</string>
    <string name="action_save">Save repo</string>
    <string name="action_repo_add">Download repo</string>browser
    <string name="action_open_by_browser">Open by Browser</string>

    <!-- menu -->
    <string name="menu_web_input">Input url</string>

    <!-- main -->
    <string name="scroll_aware_fab_behavior">com.loopeer.codereader.ui.view.ScrollAwareFABBehavior</string>
    <string name="header_item_github_search">Search</string>
    <string name="header_item_github_search_link">https://github.com/search</string>
    <string name="header_item_trending">Trending</string>
    <string name="header_item_trending_link">https://github.com/trending</string>
    <string name="repo_delete">Delete</string>

    <!-- code read -->
    <string name="code_read_not_found_type">无法解析对应文件</string>
    <string name="code_read_no_file_open">No File Opened</string>

    <!-- empty -->
    <string name="empty_main_repo">Haven\'t opened file!You can open by bottom button</string>

    <!-- download -->
    <string name="repo_download_isunzip">Unziping...</string>

    <!--search-->
    <string name="search_hint_file">Search files</string>
    <string name="search_hint_project">Search projects</string>

    <!-- download -->
    <string name="repo_download_start">%s start download</string>
    <string name="repo_download_fail">%s download fail by error url</string>
    <string name="repo_download_complete">%s download complete</string>
    <string name="repo_download_url_parse_error">This url can\'t parse to downloadUrl</string>

    <!-- web -->
    <string name="web_url_input_hint">Please input url</string>

    <!-- add repo -->
    <string name="add_repo_name_hint">Repo Name，Is The Default Name If Not Input </string>
    <string name="add_repo_url_hint">Repo Download Url</string>
    <string name="add_repo_btn">Download</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- settings -->
    <string name="setting_font_size">Font size</string>
    <string name="setting_show_line_number">Show line number</string>
    <string name="setting_use_menlo_font">Use Menlo Font</string>
    <string name="setting_theme">Theme</string>
    <string name="setting_about">About</string>

    <!-- about -->
    <string name="about_coreader">CoReader</string>
    <string name="about_email">yytodou123@gmail.com</string>
    <string name="about_content">CoReader in Github\nContact: yytodou123@gmail.com\nWe will thanks for your help to send email to us or add issue in Github.We will constantly improve the app.In order to let everyone read the code easily.At last you can download latest version at Fir Download</string>
    <string name="about_email_app_not_have">No email client configured, please setup and try again</string>
    <string name="about_coreader_github_url">https://github.com/loopeer/code-reader</string>
    <string name="about_fir_download">Fir Download</string>
    <string name="about_fir_download_url">http://fir.im/coreader</string>
    <string name="about_email_content_tip">From CoReader App</string>
    
    <!--login-->
    <string name="login_label">Sign in</string>
    <string name="login_hint_account">Username or email address</string>
    <string name="login_hint_password">Password</string>
    <string name="login_sign_in">Sign in</string>
    <string name="login_auth_error">Username or password is incorrect</string>
    <string name="login_over_auth_error">Maximum number of login attempts exceeded. Please try again later.</string>
</resources>
