<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_container"
    android:padding="@dimen/medium_padding"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edit_login_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_hint_account"
            android:maxLines="1"
            android:singleLine="true"
            android:theme="@style/EditTextStyle" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        app:passwordToggleEnabled="true"
        app:passwordToggleDrawable="@drawable/selector_pwd_visibility"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edit_login_password"
            android:padding="-2dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_hint_password"
            android:maxLines="1"
            android:singleLine="true"
            android:theme="@style/EditTextStyle"
            android:inputType="textPassword" />

    </android.support.design.widget.TextInputLayout>


    <Button
        android:id="@+id/btn_sign_in"
        android:layout_width="match_parent"
        android:layout_height="?attr/listPreferredItemHeightSmall"
        android:layout_marginTop="36dp"
        android:background="@drawable/bg_button"
        android:enabled="false"
        android:text="@string/login_sign_in"
        android:textColor="@android:color/white"
        android:textStyle="bold"/>

</LinearLayout>