<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:id="@+id/login_form"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:padding="@dimen/medium_padding">

    <LinearLayout
        android:id="@+id/email_login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/add_repo_name_hint"
                android:maxLines="1"
                android:theme="@style/EditTextStyle"
                android:singleLine="true"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_padding">

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/add_repo_url_hint"
                android:theme="@style/EditTextStyle"
                android:imeOptions="actionUnspecified"
                android:maxLines="1"
                android:singleLine="true"/>

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/email_sign_in_button"
            android:layout_width="match_parent"
            android:layout_height="?attr/listPreferredItemHeightSmall"
            android:layout_marginTop="36dp"
            android:textColor="@android:color/white"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/add_repo_btn"
            android:textStyle="bold"/>

    </LinearLayout>
</ScrollView>
